# aish

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  README_CN.md  README_EN.md  aish.spec  build.sh  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  auto-response-config.json  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_cn.yml  config.yml  feature_request.yml
.github/scripts/: auto-response.cjs
.github/workflows/: auto-response.yml  ci.yml  labeler.yml  pre-release.yml  release-pr.yml  release-preparation.yml  release.yml  stale.yml
config/: security_policy.yaml
debian/: aish-sandbox.service  aish-sandbox.socket  aish.install  aish.postinst  aish.postrm  changelog  control  rules
docs/: command-interaction-correction.md  skills-guide.md
docs/en/: ROADMAP.md  release-notes
docs/zh/: CI_CD_SCOPE_V1.md  ROADMAP_CN.md  release-notes
packaging/: build_bundle.sh  build_deb.sh  prefetch_tiktoken_cache.py
packaging/scripts/: install-bundle.sh  setup-ci-env.sh  uninstall-bundle.sh
src/aish/: __init__.py  __main__.py  agents.py  cancellation.py  cli.py  config.py  context_manager.py  env_manager.py  exception.py  (+13 more)
tests/: test_ask_user_tool.py  test_bash_executor.py  test_bash_output_offload.py  test_cli.py  test_config_xdg_data_paths.py  test_context_manager.py  test_env_var_expansion.py  test_exit_tracker_repeat_error.py  test_final_answer.py  test_history_manager.py  test_litellm_langfuse.py  test_litellm_loader.py  test_llm_events.py  test_memory_config.py  test_memory_manager.py  test_memory_models.py  test_memory_tool.py  test_openai_codex.py  test_output_language_config.py  test_path_completion.py  test_pty_input_mode.py  test_shell.py  test_shell_actions.py  test_shell_exports_compat.py  test_shell_extended.py  test_shell_path_handling.py  test_shell_prompt_io.py  test_shell_resize.py  test_skill_hot_reload.py  test_strip_sudo_prefix.py  test_tilde_expansion.py  test_verification.py
(+83 files in other folders)
